added qt6ct files, removed .zshenv and modified ly

--- a/config/ly/config.ini
+++ b/config/ly/config.ini
@@ -23,7 +23,7 @@ allow_empty_password = true
 # doom     -> PSX DOOM fire
 # matrix   -> CMatrix
 # colormix -> Color mixing shader
-animation = matrix
+animation = colormix
 
 # Stop the animation after some time
 # 0 -> Run forever
@@ -48,6 +48,7 @@ bg = 0x00000000
 # en   -> English
 # fa   -> Farsi
 bigclock = en
+bigclock_seconds = true
 
 # Blank main box background
 # Setting to false will make it transparent
@@ -58,7 +59,7 @@ border_fg = 0x00FFFFFF
 
 # Title to show at the top of the main box
 # If set to null, none will be shown
-box_title = null
+box_title = Log in already dumbass :3
 
 # Brightness increase command
 brightness_down_cmd = /usr/bin/brightnessctl -q s 5%-
@@ -77,7 +78,7 @@ clear_password = true
 
 # Format string for clock in top right corner (see strftime specification). Example: %c
 # If null, the clock won't be shown
-clock = null
+clock = %h:%m:%s
 
 # CMatrix animation foreground color id
 cmatrix_fg = 0x0100FF00
@@ -94,10 +95,10 @@ cmatrix_max_codepoint = 0x7B
 colormix_col1 = 0x00FF0000
 
 # Color mixing animation second color id
-colormix_col2 = 0x000000FF
+colormix_col2 = 0x0000FF00
 
 # Color mixing animation third color id
-colormix_col3 = 0x20000000
+colormix_col3 = 0x000000FF
 
 # Console path
 console_dev = /dev/console
