added and changed some stuff
added a helix config and removed the nvim config, added some modern unix
alternatives, changed the colours in the ly display manager from rgb to
enby colours :3

--- a/config/ly/config.ini
+++ b/config/ly/config.ini
@@ -92,13 +92,13 @@ cmatrix_min_codepoint = 0x21
 cmatrix_max_codepoint = 0x7B
 
 # Color mixing animation first color id
-colormix_col1 = 0x00FF0000
+colormix_col1 = 0x00FFF433
 
 # Color mixing animation second color id
-colormix_col2 = 0x0000FF00
+colormix_col2 = 0x009B59D0
 
 # Color mixing animation third color id
-colormix_col3 = 0x000000FF
+colormix_col3 = 0x002D2D2D
 
 # Console path
 console_dev = /dev/console
